--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="assets/css/style.css" />
 </head>
 <body>
-  <div class="vignette">
+  <div class="vignette"></div>
   <main class="site-wrap">
     <header class="site-header">
       <div class="brand">
@@ -104,6 +104,5 @@
     <!-- SCRIPTS -->
   <script src="assets/js/anim.js"></script>
   <script src="assets/js/ambient.js"></script>
-  </div>
 </body>
 </html>
